--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Rakesh Shriwas</title>
         <meta name="description" content="">
         <meta name="author" content="Rakesh Shriwas">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Custome Css -->
         <link rel="stylesheet" href="assets/css/style.css">
