add social icons

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
                         <use xlink:href="#icon-github"></use>
                     </svg>
                 </a>
+                <a href="https://www.facebook.com/rakesh.shrivas" aria-label="facebbok" target="_blank">
+                    <svg id="icon-facebook" viewBox="0 0 1024 1024">
+                        <path class="path1" d="M870.4 51.2h-716.8c-56.32 0-102.4 46.080-102.4 102.4v716.8c0 56.371 46.080 102.4 102.4 102.4h358.4v-358.4h-102.4v-126.72h102.4v-104.96c0-110.797 62.054-188.621 192.819-188.621l92.314 0.102v133.376h-61.286c-50.893 0-70.246 38.195-70.246 73.626v86.528h131.482l-29.082 126.669h-102.4v358.4h204.8c56.32 0 102.4-46.029 102.4-102.4v-716.8c0-56.32-46.080-102.4-102.4-102.4z"></path>
+                      </svg>
+                </a>
+                <a href="https://www.instagram.com/rocky__handsome/" aria-label="instagram" target="_blank">
+                    <svg id="icon-instagram" viewBox="0 0 1024 1024">
+                        <path class="path1" d="M870.4 51.2h-716.8c-56.32 0-102.4 46.080-102.4 102.4v716.8c0 56.371 46.080 102.4 102.4 102.4h716.8c56.32 0 102.4-46.029 102.4-102.4v-716.8c0-56.32-46.080-102.4-102.4-102.4zM511.181 794.778c156.621 0 283.546-127.027 283.546-283.597 0-17.306-2.202-33.997-5.274-50.381h80.947v369.459c0 19.558-15.872 35.328-35.482 35.328h-645.837c-19.61 0-35.482-15.77-35.482-35.328v-369.459h79.309c-3.123 16.384-5.325 33.075-5.325 50.381 0 156.621 127.027 283.597 283.597 283.597zM333.978 511.181c0-97.894 79.36-177.203 177.254-177.203 97.843 0 177.254 79.309 177.254 177.203s-79.411 177.254-177.254 177.254c-97.946 0-177.254-79.36-177.254-177.254zM834.918 307.2h-82.688c-19.558 0-35.43-15.974-35.43-35.43v-82.79c0-19.558 15.872-35.379 35.379-35.379h82.688c19.661 0 35.533 15.821 35.533 35.379v82.739c0 19.507-15.872 35.482-35.482 35.482z"></path>
+                      </svg>
+                </a>
                 <a href="https://twitter.com/rakeshshriwas88" aria-label="twitter" target="_blank">
                     <svg viewBox="0 0 32 32">
                         <use xlink:href="#icon-twitter"></use>
