update meta tags

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Rakesh Shriwas</title>
-        <meta name="description" content="">
-        <meta name="author" content="Rakesh Shriwas">
+        <title>Rakesh Shriwas | Sr. Front-end Developer</title>
+        <meta name="description" content="Sr. Front-end Developer">
+        <meta itemprop="name" content="Rakesh Shriwas - Sr. Front-end Developer">
+        <meta name="author" content="Rakesh Shriwas - Sr. Front-end Developer">
+
+        <meta name="google-site-verification" content="4P_cLRkt8gKE3ZJib362vSMKkFWomUoPrY0Z1HAfYbo" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Custome Css -->
@@ -40,7 +43,7 @@
         </svg>        
         <div class="container">
             <h1>Rakesh Shriwas</h1>
-            <p>Sr. Frontend developer at wittyfeed</p>
+            <p>Sr. Front-end developer at wittyfeed</p>
             <div class="icons">
                 <a href="https://github.com/rakeshshriwas/" aria-label="github" target="_blank">
                     <svg viewBox="0 0 32 32">
