--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </svg>        
         <div class="container">
             <h1>Rakesh Shriwas</h1>
-            <p>Sr. Front-end developer at wittyfeed</p>
+            <p>Sr. Front-end Developer at wittyfeed</p>
             <div class="icons">
                 <a href="https://github.com/rakeshshriwas/" aria-label="github" target="_blank">
                     <svg viewBox="0 0 32 32">
