--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 
 </head>
 
-<body style="    background-image: url(assets/images/bg.svg);
-    background-size: contain;
-    background-position: center center;">
+<body>
     <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
