--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                     <use xlink:href="#icon-twitter"></use>
                 </svg>
             </a>
+            <a href="https://codepen.io/rakeshshrivas" aria-label="codepen" target="_blank">
+                <svg viewBox="0 0 32 32">
+                    <use xlink:href="#icon-codepen"></use>
+                </svg>
+            </a>
         </div>
     </div>
 
